improve the ui